--- a/subgraphs/arbitrum-one-bridge/protocols/arbitrum-one-bridge/config/templates/arbitrum-one-bridge.template.yaml
+++ b/subgraphs/arbitrum-one-bridge/protocols/arbitrum-one-bridge/config/templates/arbitrum-one-bridge.template.yaml
@@ -34,7 +34,7 @@ dataSources:
         - PoolDailySnapshot
         - PoolHourlySnapshot
         - PoolRoute
-        - PoolRouteSnapshot        
+        - PoolRouteSnapshot
       abis:
         ###########################################
         ################ Arb -> Eth ###############
@@ -104,7 +104,7 @@ dataSources:
         - PoolDailySnapshot
         - PoolHourlySnapshot
         - PoolRoute
-        - PoolRouteSnapshot        
+        - PoolRouteSnapshot
       abis:
         ###########################################
         ############## Eth -> Arb (ETH) ###########
@@ -147,6 +147,8 @@ dataSources:
       eventHandlers:
         - event: MessageDelivered(indexed uint256,indexed bytes32,address,uint8,address,bytes32,uint256,uint64)
           handler: handleL1MessageDelivered
+        - event: BridgeCallTriggered(indexed address, indexed address,uint256,bytes)
+          handler: handleL1BridgeCallTriggered
   {{/L1Bridge}}
   {{#L2Gateways}}
   - kind: ethereum
@@ -288,3 +290,73 @@ dataSources:
         - event: L2ToL1Tx(address,indexed address,indexed uint256,indexed uint256,uint256,uint256,uint256,uint256,bytes)
           handler: handleL2ToL1Tx
   {{/L2ArbSys}}
+  {{#L1oldBridge}}
+  - kind: ethereum
+    name: {{ name }}
+    network: {{ network }}
+    source:
+      address: "{{ address }}"
+      abi: {{ abi }}
+      startBlock: {{ startBlock }}
+    mapping:
+      kind: ethereum/events
+      apiVersion: 0.0.6
+      language: wasm/assemblyscript
+      file: {{{ file }}}
+      entities:
+        - BridgeProtocol
+        - FinancialsDailySnapshot
+        - UsageMetricsDailySnapshot
+        - UsageMetricsHourlySnapshot
+        - Token
+        - CrosschainToken
+        - Pool
+        - PoolDailySnapshot
+        - PoolHourlySnapshot
+        - PoolRoute
+        - PoolRouteSnapshot
+      abis:
+        ###########################################
+        ############## Eth -> Arb (ETH) ###########
+        ###########################################
+        - name: {{ abi }}
+          file: ./abis/L1{{ abi }}.json
+
+        ###########################################
+        ############## Price Oracle ###############
+        ###########################################
+        # ERC20
+        - name: _ERC20
+          file: ./abis/Prices/ERC20.json
+        # Curve Contracts
+        - name: CurvePool
+          file: ./abis/Prices/Curve/Pool.json
+        - name: CurveRegistry
+          file: ./abis/Prices/Curve/Registry.json
+        - name: CalculationsCurve
+          file: ./abis/Prices/Calculations/Curve.json
+        # YearnLens Contracts
+        - name: YearnLensContract
+          file: ./abis/Prices/YearnLens.json
+        # Aave Oracle Contract
+        - name: AaveOracleContract
+          file: ./abis/Prices/AaveOracle.json
+        # SushiSwap Contracts
+        - name: CalculationsSushiSwap
+          file: ./abis/Prices/Calculations/SushiSwap.json
+        # ChainLink Contracts
+        - name: ChainLinkContract
+          file: ./abis/Prices/ChainLink.json
+        # Uniswap Contracts
+        - name: UniswapRouter
+          file: ./abis/Prices/Uniswap/Router.json
+        - name: UniswapFactory
+          file: ./abis/Prices/Uniswap/Factory.json
+        - name: UniswapPair
+          file: ./abis/Prices/Uniswap/Pair.json
+      eventHandlers:
+        - event: MessageDelivered(indexed uint256,indexed bytes32,address,uint8,address,bytes32)
+          handler: handleL1MessageDelivered
+        - event: BridgeCallTriggered(indexed address, indexed address,uint256,bytes)
+          handler: handleL1BridgeCallTriggered
+  {{/L1oldBridge}}
